[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-jwmarket"
version = "1.0.0"
description = "Modern auction house and market system for EndstoneMC with SQLite backend"
readme = "README.md"
license = "MIT"
authors = [{ name = "JWDev" }]
requires-python = ">=3.12"
dependencies = ["endstone>=0.10.0", "aiosqlite>=0.20.0", "pyyaml>=6.0"]

[project.entry-points."endstone"]
jwmarket = "jwmarket.main:JWMarket"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jwmarket = ["resources/*.yml"]
